@@ -3,7 +3,8 @@ Version history of the R genetic analysis package (R/gap)
 Version 1.5
 12-01-2023	Apply bookdown to shinygap.Rmd
 		Suggests mets in gap.examples instead
-		Initialize r=0 at lines 252, 694
+		Initialize r=0 at lines 252, 695 of gcontrol_c.c
+		Remove "typedef enum{false=0,true=1} boolean" in pgc.h and use false/true=0/1 in pgc_c.c
 		Modify gap.Rmd
 
 Version 1.4-2
